--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -5,6 +5,22 @@
   --color-4: #000000;
 }
 
+@media (max-width: 1024px) {
+  .card-content {
+    padding: 3rem;
+  }
+
+  .card-services {
+    margin: 0 1rem;
+    padding: 1.5rem;
+  }
+
+  .card-services p {
+    font-size: 10px;
+    margin: 15px 0;
+  }
+}
+
 @media (max-width: 768px) {
   .menu-container {
     display: none;
@@ -80,6 +96,11 @@
   .products-container h2 {
     width: 100%;
   }
+
+  .cards-container,
+  .slick-slide {
+    margin: 0px 10px;
+  }
 }
 
 @media (max-width: 425px) {
@@ -123,9 +144,9 @@
   .about-text p {
     font-size: 14px;
   }
- 
-  .services-container{
-     padding: 1rem;
+
+  .services-container {
+    padding: 1rem;
   }
   .services-container h2 {
     font-size: 30px;
@@ -162,12 +183,12 @@
     font-size: 20px;
   }
 
-  .products-container{
-     padding: 1rem;
+  .products-container {
+    padding: 1rem;
   }
 
-  .products-container h2{
-     font-size: 25px;
+  .products-container h2 {
+    font-size: 28px;
   }
 }
 
@@ -188,7 +209,7 @@
   }
 
   .services-container h2 {
-    font-size: 30px;
+    font-size: 24px;
   }
 
   .card-services {
@@ -200,6 +221,10 @@
 
   .bg-container p {
     font-size: 20px;
+  }
+
+  .products-container h2 {
+     font-size: 24px;
   }
 }
 
@@ -217,10 +242,34 @@
   }
 
   .services-container h2 {
-    font-size: 25px;
+    font-size: 20px;
   }
 
   .bg-container p {
     font-size: 15px;
+  }
+
+  .products-container h2 {
+    font-size: 20px;
+  }
+
+  .cards-products img {
+    width: 100%;
+    height: 200px;
+  }
+
+  .cards-products h3 {
+    font-size: 18px;
+  }
+
+  .cards-products p {
+    font-size: 10px;
+    padding: 16px;
+  }
+
+  .cards-products a {
+    width: 90%;
+    margin-bottom: 10px;
+    font-size: 10px;
   }
 }
